--- a/reservas.html
+++ b/reservas.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Listado de reservas</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
   <script src="js/app.js" defer></script>
 </head>
 
@@ -36,8 +35,7 @@
     <th></th>
   </tr>
   </thead>
-  <tbody id="tableBody">
-  </tbody>
+  <tbody id="tableBody"></tbody>
 </table>
 
 <button class="btn btn-primary" id="openDialogAddReservaBtn">Añadir reserva</button>
@@ -45,24 +43,30 @@
 <!-- Formulario modal para añadir reserva -->
 <dialog class="container mb-3 mt-3" style="border: 1px solid black" id="nuevaReservaDialog">
   <h2>Nueva reserva</h2>
-  <div class="mb-3">
-    <input class="form-control" type="text" id="nombreCliente" placeholder="Nombre del Cliente">
-  </div>
-  <div class="mb-3">
-    <select class="form-control" id="mesaSelect">
-      <option value="">Seleccionar Mesa</option>
-      <!-- Aquí se llenarán las mesas disponibles dinámicamente -->
-    </select>
-  </div>
+
+  <!-- Campo de fecha -->
   <div class="mb-3">
     <input class="form-control" type="date" id="fechaReserva" placeholder="Fecha">
   </div>
+
+  <!-- Campo de hora -->
   <div class="mb-3">
     <input class="form-control" type="time" id="horaReserva" placeholder="Hora">
   </div>
+
+  <!-- Campo de mesas disponibles -->
+  <div class="mb-3">
+    <select class="form-control" id="mesaSelect">
+      <option value="">Seleccionar Mesa</option>
+      <!-- Las mesas disponibles se llenarán dinámicamente -->
+    </select>
+  </div>
+
+  <!-- Número de personas -->
   <div class="mb-3">
     <input class="form-control" type="number" id="numPersonas" placeholder="Número de personas">
   </div>
+
   <button class="btn btn-primary mb-3" id="addReservaBtn">Añadir reserva</button>
   <button class="btn btn-danger mb-3" id="cancelReservaBtn">Cerrar</button>
 </dialog>
